Contrast fixes and dt styling
Affected: headers, links, base colours, non-existent modules

--- a/main.less
+++ b/main.less
@@ -12,25 +12,31 @@ body {
 	line-height: 1.3em;
 	padding: 0;
 	margin: 0;
-	color: #111;
+	color: #000;
 	background: @bold-bkg;
 }
 a {
 	text-decoration: none;
-	color: #36a;
+	color: #04a;
 }
 a:visited {
-	color: #35a;
+	color: #027;
 }
 #p-personal a.new,
 .new a,
 a.new {
-	color: #a56
+	color: #a07
 }
 #p-personal a.new:visited,
 .new a:visited,
 a.new:visited {
-	color: #857
+	color: #705
+}
+a.external {
+	color: #07a;
+}
+a.external:visited {
+	color: #057;
 }
 .center {
 	margin: auto;
@@ -451,22 +457,22 @@ label {
 	font-size: 93%;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, dt {
 	line-height: 1.1em;
 	font-variant: small-caps;
 	font-weight: normal;
-	color: #666;
+	color: #444;
 	margin-bottom: .25em;
-	text-shadow: 0 -1px 0 #ddd, 0 0 1px #999;
 	margin: 1.5em 0 .5em;
 }
 h1 .mw-editsection,
 h2 .mw-editsection,
-h3, h4, h5, h6 {
+h3, h4, h5, h6, dt {
 	font-variant: normal;
 }
 h1 {
 	font-size: 190%;
+	color: #666;
 }
 h2 {
 	font-size: 160%;
@@ -479,9 +485,11 @@ h4 {
 }
 h5 {
 	font-size: 110%;
+	color: #333;
 }
-h6 {
+h6, dt {
 	font-size: 100%;
+	color: #333;
 }
 .mw-editsection-bracket {
 	display: none;
